Fix bad alignment on the elastic profiles page

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/elastic_profiles.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/elastic_profiles.scss
@@ -133,7 +133,3 @@ $elastic-profile-icon-text-padding: 20px;
     margin: 0;
   }
 }
-
-.modal-body .id-and-plugin-id-wrapper .columns:first-child {
-  padding-left: 0;
-}
